# spectra-estimation-dMRI

./: .cursorrules  .gitignore  BIOMARKER_ANALYSIS_GUIDE.md  BIOMARKER_IMPLEMENTATION_SUMMARY.md  BIOMARKER_METHODOLOGY.md  BIOMARKER_WORKFLOW_SUMMARY.md  BUGFIX_SUMMARY.md  BWH_WORKFLOW.md  BWH_WORKFLOW_SUMMARY.md  CLAUDE.md  DIAGNOSTIC_ARCHITECTURE.md  DISCRETIZATION_RATIONALE.md  FEEDBACK_IMPLEMENTATION_SUMMARY.md  HANDOVER_FIGURE_SESSION.md  ISMRM_ABSTRACT_UNCERTAINTY_PROPAGATION.md  LOGISTIC_REGRESSION_EXPLANATION.md  MEETING_PREP_2026-05-25.md  MULTICHAIN_FIX_SUMMARY.md  PROJECT_STATE.md  QUICK_REFERENCE.md  README.md  SAMPLER_COMPARISON_EXPERIMENTS.md  SNR_MATHEMATICAL_DERIVATION.md  UNCERTAINTY_CALIBRATION_GUIDE.md  _email_draft_2026-05-23.md  applied_math_approaches.txt  configs.yaml  notes_manuscript_2nd_pass.txt  notes_manuscript_3rd_pass.md  notes_manuscript_4th_pass_pathA_prime.md  notes_session_2026-05-14_classifier_deepdive.md  notes_session_2026-05-17_handover.md  notes_session_2026-05-17_literature.md  pyproject.toml  run_bwh_full.sh  run_bwh_test.sh  run_snr_validation_full.sh  run_snr_validation_quick.sh
.cursor/: FINDINGS.md  SESSION.md
configs/: config.yaml
data/: ggg_aggressiveness_d2.json  ggg_aggressiveness_d2_discarded.json  patient_gleason_grading.csv  processed_patient_dict.json  prostate_rois.csv  tumor_normal_d1.json  tumor_normal_d1_discarded.json
notes/: CRLB_NOTE_FOR_SANDY.txt   CRLB_NOTE_FOR_SANDY_v2_2026-06-21.md  JOINT_ITERATION_AGENDA.md  MEETING_PREP_2026-06-02.md  MRM_AUTHOR_GUIDELINES.md  discussion_lit_map_2026-06-23.md  (+4 more)
(+231 files in other folders)
